--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "monaco-editor": "^0.23.0",
     "querystring": "^0.2.1",
     "react": "^17.0.2",
+    "react-autosize-textarea": "^7.1.0",
     "react-dom": "^17.0.2",
     "react-monaco-editor": "^0.43.0",
     "react-redux": "^7.2.4",
